2004-06-02  David Gravereaux <davygrvy@pobox.com>

	* tests/winPipe.c (winpipe-6.1): blocking set to 1 before
	closing to ensure we get an exitcode.  The windows pipe channel
	driver doesn't differentiate between a blocking and non-blocking
	close just yet, but will soon.  Part of [Bug 947693]

2004-06-02  Vince Darley  <vincentdarley@users.sourceforge.net>

	* doc/file.n: fix to documentation of 'file volumes' (Bug 962435)

2004-06-01  David Gravereaux <davygrvy@pobox.com>

	* win/makefile.vc: check for either MSDEVDIR or MSVCDIR being in
	the environment, for VC7.  [Bug 942214]

	* generic/tclIO.c (Tcl_SetChannelOption):  -buffersize wasn't
	understanding hexidecimal notation nor was reporting number
	conversion errors.  The behavior to silently ignore settings
	outside the acceptable range of Tcl_SetChannelBufferSize
	(<10 or >1M) is unchanged.  This silent ignoring behavior
	might be up for review soon..

2004-05-30  David Gravereaux <davygrvy@pobox.com>

	* win/tclWinPipe.c:
	* win/tclWinPort.h:  Reworked the win implementation of
	Tcl_WaitPid to support exitcodes in the 'signed short' range.
	Even though this range is non-portable, it is valid on windows.
	Detection of exception codes are now more accurate.  Previously,
	an application that exited with ExitProcess((DWORD)-1); was
	improperly reported as exiting with SIGABRT.

2004-05-30  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclInterp.c: Added comments describing the purposes of
	each function in the limit implementation and rewrote the names of
	some non-public functions for greater clarity of purpose.
	* doc/interp.n: Added note about what happens when a limited
	interpreter creates a slave interpreter.
	* doc/Limit.3: Added manual page for the resource limit
	subsystem's C API. [Bug 953903]

2004-05-29  Joe English  <jenglish@users.sourceforge.net>

	* doc/global.n, doc/interp.n, doc/lrange.n:
	Fix minor markup errors.

2004-05-28  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
